website/versioned_docs/version-2.0.0-alpha.12/web.containerstorage.md
---
id: version-2.0.0-alpha.12-web.containerstorage
title: ContainerStorage interface
hide_title: true
original_id: web.containerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## ContainerStorage interface


<b>Signature:</b>

```typescript
export declare interface ContainerStorage 
```

## Methods

|  Method | Description |
|  --- | --- |
|  [delAccessToken(namespace)](./web.containerstorage.delaccesstoken.md) |  |
|  [delAuthenticationSession(namespace)](./web.containerstorage.delauthenticationsession.md) |  |
|  [delIdentity(namespace)](./web.containerstorage.delidentity.md) |  |
|  [delMFABearerToken(namespace)](./web.containerstorage.delmfabearertoken.md) |  |
|  [delOAuthRedirectAction(namespace)](./web.containerstorage.deloauthredirectaction.md) |  |
|  [delRefreshToken(namespace)](./web.containerstorage.delrefreshtoken.md) |  |
|  [delSessionID(namespace)](./web.containerstorage.delsessionid.md) |  |
|  [delUser(namespace)](./web.containerstorage.deluser.md) |  |
|  [getAccessToken(namespace)](./web.containerstorage.getaccesstoken.md) |  |
|  [getAuthenticationSession(namespace)](./web.containerstorage.getauthenticationsession.md) |  |
|  [getExtraSessionInfoOptions(namespace)](./web.containerstorage.getextrasessioninfooptions.md) |  |
|  [getIdentity(namespace)](./web.containerstorage.getidentity.md) |  |
|  [getMFABearerToken(namespace)](./web.containerstorage.getmfabearertoken.md) |  |
|  [getOAuthRedirectAction(namespace)](./web.containerstorage.getoauthredirectaction.md) |  |
|  [getRefreshToken(namespace)](./web.containerstorage.getrefreshtoken.md) |  |
|  [getSessionID(namespace)](./web.containerstorage.getsessionid.md) |  |
|  [getUser(namespace)](./web.containerstorage.getuser.md) |  |
|  [setAccessToken(namespace, accessToken)](./web.containerstorage.setaccesstoken.md) |  |
|  [setAuthenticationSession(namespace, authenticationSession)](./web.containerstorage.setauthenticationsession.md) |  |
|  [setExtraSessionInfoOptions(namespace, options)](./web.containerstorage.setextrasessioninfooptions.md) |  |
|  [setIdentity(namespace, identity)](./web.containerstorage.setidentity.md) |  |
|  [setMFABearerToken(namespace, mfaBearerToken)](./web.containerstorage.setmfabearertoken.md) |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./web.containerstorage.setoauthredirectaction.md) |  |
|  [setRefreshToken(namespace, refreshToken)](./web.containerstorage.setrefreshtoken.md) |  |
|  [setSessionID(namespace, sessionID)](./web.containerstorage.setsessionid.md) |  |
|  [setUser(namespace, user)](./web.containerstorage.setuser.md) |  |

